# 6403yakuhiniv

./: .gitignore  Pipfile  README.md  global_emissions.csv  log_conf.py  lr1_main.py  main.py  pyproject.toml  run_tests.py  test.csv
dog_image_processor/: __main__.py
dog_image_processor/implementation/: __init__.py  dog_image.py  dog_image_processing.py  image_processing.py
implementation/: __init__.py  cv2_image_processing.py  dog_image.py  dog_image_processing.py  image_processing.py
tests/: test_dog_image.py  test_dog_image_processor.py
