[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dog_image_processor"
version = "1.0.0"
description = "Асинхронный процессор изображений собак"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "aiofiles",
    "opencv-python",
    "Pillow",
    "numpy",
    "python-dotenv",
    "numba",
]

[project.scripts]
dog-processor = "dog_image_processor.__main__:main"

[tool.setuptools]
packages = ["dog_image_processor", "dog_image_processor.implementation", "dog_image_processor.interfaces"]
py-modules = ["log_conf"]